# TextEditorThing

./: .gitignore  CMakeLists.txt  README.md
src/: app.cpp  buffer.cpp  buffer.hpp  caret.cpp  caret.hpp  editor.cpp  editor.hpp  frame.cpp  frame.hpp  undo.cpp  undo.hpp
